--- a/src/pages/compare-towns.html
+++ b/src/pages/compare-towns.html
@@ -51,7 +51,7 @@
                     <h4 class="control-label">{{ control.label }}</h4>
                 </div>
                 <div class="col-xs-10 col-sm-10 col-md-10 col-lg-8">
-                    <label ng-repeat="option in control.options" class="btn ctdata-btn-toggle" ng-model="config[(control.name | lowercase)]" btn-radio="(option | lowercase)">
+                    <label ng-repeat="option in control.options" class="btn ctdata-btn-toggle" ng-model="config[(control.name | lowercase)]" uib-btn-radio="(option | lowercase)">
                         {{ option }}
                     </label>
                 </div>
@@ -119,78 +119,8 @@
             <span>View Metadata</span>
             <i class="fa" ng-class="{'true' : 'fa-plus-circle', 'false' : 'fa-minus-circle'}[collapsed['metadata']]"></i>
         </div>
-        <div class="col-xs-12" collapse="collapsed['metadata']">
-            <h2>
-                Overview and Relevant Legislation
-            </h2>
-            <p>
-                This data portal provides business formation and public record filing data filed with the Office of the Secretary of the State from 1980 to 2015. The Secretary of the State's business registry records filing types mandated or authorized under <a target="_blank" href="https://www.cga.ct.gov/2011/pub/title33.htm">Title 33<i class="fa fa-external-link-square"></i></a> and <a target="_blank" href="https://www.cga.ct.gov/2011/pub/title34.htm">Title 34<i class="fa fa-external-link-square"></i></a> of the Connecticut General Statutes, comprising the bodies of law regulating business entity formation and the governance of Business Corporations, Nonstock Corporations, Benefit Corporations, Limited Liability Companies, Limited Liability Partnerships, Limited Partnerships and Statutory Trusts.
-            </p>
-            <h3>
-                Business Entity Types
-            </h3>
-            <p>
-                The public record indicates business types as domestic &mdash; meaning formed under CT laws &mdash; or foreign &mdash; formed outside of CT either another state in the United States or outside the United States.
-            </p>
-            <h3>Business Entity Types required to file with the SOTS:</h3>
-            <p>
-                <ul>
-                    <li>
-                        <b>LLC (CT)</b> &mdash; Limited Liability Company formed under the laws of CT, without regard to physical location
-                    </li>
-                    <li>
-                        <b>LLC (Non-CT)</b> &mdash; Limited Liability Company formed under the laws of a jurisdiction other than CT, without regard to physical location
-                    </li>
-                    <li>
-                        <b>Stock Corporation</b> &mdash; Generally referring to a "business corporation", whether Domestic or Foreign
-                    </li>
-                    <li>
-                        <b>Nonstock Corporation</b> &mdash; usually a nonprofit company, whether Domestic or Foreign, but may also be a religious corporation, religious society or a corporation formed by Special Public Act of the CT General Assembly
-                    </li>
-                    <li>
-                        <b>LP</b> &mdash; Limited Partnership, whether Domestic or Foreign
-                    </li>
-                    <li>
-                        <b>LLP</b> &mdash; Limited Liability Partnership, whether Domestic or Foreign
-                    </li>
-                    <li>
-                        <b>Stat. Trust</b> &mdash; whether Domestic or Foreign
-                    </li>
-                    <li>
-                        <b>Benefit Corp.</b> &mdash; a subcategory of Business Corporations that became effective in 2014. <b>Note</b>: the record only differentiates Domestic Benefit Corporations. The record does not differentiate Foreign Benefit Corporations, which are recorded only as general Foreign Corporations.
-                    </li>
-                    <li>
-                        <b>Other</b> &mdash; Banks, Credit Unions, and Insurance Companies, which are not generally required to register with the SOTS, but which are authorized to register with the SOTS.
-                    </li>
-                </ul>
-            </p>
-            <p>
-                While <b>all <i>statutory</i> business entities</b> are required to file with the Secretary of the State ("SOTS"), <b>not all business types</b> are required to file with the Secretary. Sole Proprietorships and General Partnerships are not statutory entity types, and are instead required to file trade name certificates with Town Clerks, when operating under assumed names (often called "d/b/a's"). A small number of General Partnerships voluntarily register with SOTS, and are present in our data, however they do not represent a comprehensive measure of the formation of General Partnerships.
-            </p>
-            <h3>
-                Limitations of this Data
-            </h3>
-            <h4>
-                Addresses
-            </h4>
-            <p>
-                Addresses listed on the public record represent the current address by each entity of record. Note that this may not necessarily be the address of the entity's original formation.
-            </p>
-            <p>
-                The domesticity of an entity is determined by the jurisdiction of the laws under which the entity is formed and governed, rather than the physical location of the entity's headquarters or offices. For example, a company could be headquartered in Connecticut and be a Delaware company by virtue of its choice of Delaware corporate law under which to form and govern its internal affairs. 
-            </p>
-            <h4>
-                Industry Classification
-            </h4>
-            <p>
-                In the formation filings, businesses are not required to indicate their industry. Therefore industry data is not present in this database.
-            </p>
-            <h4>
-                Business Churn
-            </h4>
-            <p>
-                In 1995, legislation removed the authority of the Secretary of the State to dissolve entities that are noncompliant with Annual Report filing requirements. This does not impact formation numbers, but means a business churn value cannot be calculated. Effective January 1, 2015, this authority was reinstated to the Secretary of the State. To be administratively dissolved, a business must be in default status for a year, then it will be dissolved in the second year of noncompliance. In the case of Nonstock Corporations, the entity must be in default status for two years, and will be administratively dissolved in its third year of noncompliance. SOTS will begin purging businesses from the record beginning in mid-2016.
-            </p>
+        <div class="col-xs-12" uib-collapse="collapsed['metadata']">
+            <div ng-include="'/templates/metadata.html'"></div>
         </div>
     </div>
 </div>
