updated templates to use year range from config

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -2,7 +2,7 @@
   <h1>Exploring Business Formation Patterns in Connecticut</h1>
   <div class="row">
     <div class="col-sm-12">
-      <p>In partnership with the Secretary of the State's office, CTData is excited to present business formation data from 1980 to 2015. This is the first time this data has been made open and accessible.</p>
+      <p>In partnership with the Secretary of the State's office, CTData is excited to present business formation data from {{ startYear }} to {{ endYear }}. This is the first time this data has been made open and accessible.</p>
       <p>Here you will find 3 ways to explore the data: Visualize 'Formation' patterns,  compare "My Town" to other towns, or search the entire database.</p>
     </div>
   </div>
@@ -19,7 +19,7 @@
           <a href="/#/formations-over-time">
             <h3>Formations over time</h3>
           </a>
-          <p>Explore formation patterns by <b>county</b> or <b>town</b>, from <b>1980-2015</b> by <b>year, quarter or month</b>, and by <b>business type</b>. Visualize the data on a map or in a bar chart</p>
+          <p>Explore formation patterns by <b>county</b> or <b>town</b>, from <b>{{ startYear }}-{{ endYear }}</b> by <b>year, quarter or month</b>, and by <b>business type</b>. Visualize the data on a map or in a bar chart</p>
         </div>
       </div>
     </div>
