--- a/src/pages/formations-over-time.html
+++ b/src/pages/formations-over-time.html
@@ -50,7 +50,7 @@
                         <button id="start-date-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
                             {{ config.start }}<span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="start-date-button">
                             <li class="dropdown-menu-option" role="menuitem" ng-click="selectStart(option)" ng-repeat="option in activeChoices">{{option.label}}</li>
                         </ul>
                     </div>
