--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -1,12 +1,15 @@
 <div class="container-fluid main-internal">
-    <h1>Exploring Business Formation Patterns in Connecticut</h1>
     <div class="row">
-        <div class="col-sm-12">
-            <p>In partnership with the Secretary of the State's office, CTData is excited to present business formation
+          <div class="col-sm-12">
+            <img class="sots-logo" src="/images/sots-seal.png" />
+            <h1>Exploring Business Formation Patterns in Connecticut</h1>
+            <p>In partnership with the <a class="sots-link" href="http://www.sots.ct.gov/sots/site/default.asp">Connecticut Secretary of the
+                State</a>, The Connecticut Data Collaborative is excited to present business formation
                 data from {{ startYear }} to {{ endYear }}. This is the first time this data has been made open and
                 accessible.</p>
-            <p>Here you will find 3 ways to explore the data: Visualize 'Formation' patterns, compare "My Town" to other
-                towns, or search the entire database.</p>
+            <p>Here you will find two ways to explore the data: Visualize <a class="sots-link" href="/#/formations-over-time">formations
+              over time</a> or <a class="sots-link" href="/#/compare-towns">compare a subset of towns</a>. You can also search for businesses
+              on our dedicated <a class="sots-link" href="http://searchctbusiness.ctdata.org">search portal</a>.
         </div>
     </div>
     <div class="row">
@@ -46,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
+        <!-- <div class="path col-lg-4 col-md-12 col-sm-12 col-xs-12">
             <div>
                 <div class="bluebar"></div>
                 <a href="/#/compare-towns">
@@ -55,15 +58,14 @@
                     </div>
                 </a>
                 <div class="col-sm-8 path-info">
-                    <a href="/#/">
+                    <a href="http://searchctbusiness.ctdata.org">
                         <h3>Search the Data</h3>
                     </a>
-                    <p><b>Coming Soon!</b></p>
-                    <p>Look for a subset of data that is interesting to you.</p>
+                    <p>Search for business records by name and location.</p>
                 </div>
             </div>
-        </div>
-        <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
+        </div> -->
+        <!-- <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <div>
                 <div class="bluebar"></div>
                 <a href="http://ctdata.org/tag/sots">
@@ -78,12 +80,12 @@
                     <p>See what interesting things CTData has to say about this data.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="center-text col-xs-12">
             <h5>In partnership with the Connecticut Secretary of the State</h5>
-            <img style="height:8rem;width:auto;" src="/static/dist/images/sots-seal.png" />
+            <img style="height:8rem;width:auto;" src="/images/sots-seal.png" />
         </div>
-    </div>
+    </div> -->
 </div>
